infra-repo/kubernetes/ingresses/back-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-ingress
  namespace: backend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: hotels.app.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
