infra-repo/kubernetes/ingresses/log-kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-kibana-ingress
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: hotels.app.kibana.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-kibana-service
                port:
                  number: 5601
